setup-emailing-n-forms: Contact-Us verbiage edits

--- a/templates/pages/contact-thanks.html
+++ b/templates/pages/contact-thanks.html
@@ -10,9 +10,9 @@
     <div id="contact-submitted-div" class="card border-primary mx-auto mb-3 p-3 text-center"> 
 
       <p id="contact-submitted-msg" class="m-auto">
-        Thanks! For sending us comments or question. <br />
+        Thanks! For sending us comments or questions. <br />
         Pleas note, this website is a college (North Shore Community College in MA) student project.<br/>
-        Unfortunately, we can't respond to comments or question.
+        Unfortunately, we can't respond to comments or questions.
       </p>
 
     </div>
