--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -13,7 +13,7 @@
 <div id="contact-form-container" class="container-fluid mt-1 mb-5 p-3">
   <p id="contact-disclaimer-msg" class="mx-auto mt-0 mb-4 text-center">
     Pleas note, this website is a college (North Shore Community College in MA) student project.
-    While you may send us questions or comments, you will not receive a response.
+    While you are welcome to send us questions or comments, regretfully, we cannot respond.
   </p>
 
   <div id="contact-form-div" class="card border-primary m-auto mb-5 p-3">
