--- a/templates/_base_vue.html
+++ b/templates/_base_vue.html
@@ -19,7 +19,7 @@
         JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
 
-  <div id="app"></div>
+  <div id="app" class="container-fluid mx-auto mt-0 mb-5"></div>
   <!-- Built files will be auto injected.  And, the Django tags/blocks in this file will be
        auto injected into _base_vue.html per the vue.config.js file.-->
   
