--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,21 +27,21 @@
 
 <body>
   {% block body %}
-  <header>
+  <header class="row">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <!-- Site Logo -->
-      <a id="play2learn-logo-home-link" class="navbar-brand" href="{% url 'pages:home' %}" 
+      <a id="play2learn-logo-home-link" class="navbar-brand ms-2 ps-3" href="{% url 'pages:home' %}" 
         alt="Play2Learn Logo: Click, tap, or press Enter to go to the home page" 
         title="Play2Learn Logo: Click, tap, or press Enter to go to the home page">
         <img id="play2learn-logo" 
-          class="img-fluid ms-2 float-start" 
+          class="img-fluid float-start" 
           src="{% static 'images/play2Learn_logo.png' %}" 
           alt="Play2Learn Logo" 
           aria-description="AI generated image"/>
       </a> <!-- END Site Logo -->
 
       <!-- Mobile Main Menu btn -->
-      <button id="main-menu-toggle-btn" class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" 
+      <button id="main-menu-toggle-btn" class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" 
         data-bs-target="#main-menu" aria-expanded="false" aria-controls="main-menu" 
         aria-label="Toggle Mobile Main Menu">
         <span id="main-menu-toggle-icon" class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
 
 
       <div id="main-menu" class="collapse navbar-collapse me-3 justify-content-end text-end">
-        <ul id="main-menu-top-nav" class="navbar-nav ms-auto">
+        <ul id="main-menu-top-nav" class="navbar-nav ms-auto me-3">
           <li id="home-nav-item" class="nav-item active">
             <a id="home-nav-link" class="nav-link" href="{% url 'pages:home' %}" 
               alt="Go to the home page">Home</a> 
@@ -134,13 +134,14 @@
   </header>
   
   
-  {% block main %}{% endblock %} <!-- end main -->
+  {% block main %}
+  {% endblock %} <!-- end main -->
   
 
   <footer class="fixed-bottom bg-light row clearfix">
-    <div class="col">
-      <nav>
-        <ul class="nav float-end">
+    <div class="row pe-0">
+      <nav class="navbar navbar-light bg-light px-2">
+        <ul class="nav">
           <li id="admin-footer-item" class="nav-item">
             <a id="admin-footer-link" class="nav-link" href="{% url 'admin:index' %}" 
               alt="Log in to our Admin site">Admin</a>
@@ -152,14 +153,15 @@
           <li id="feedback-footer-item" class="nav-item">
             <a id="feedback-footer-link" class="nav-link" href="{% url 'reviews:feedback' %}" 
               alt="Send feedback or write a review">Feedback/Reviews</a>
-          </li>  
+          </li>
+        </ul>
+        <p class="ms-3 me-2 mt-2 mb-2">
+          <cite>Website designed &amp; developed by: 
+            <a href="https://github.com/heather-cunningham" rel="noopener" target="_blank" 
+            alt="See my GitHub portfolio" title="See my GitHub portfolio">Heather I. Cunningham</a>
+          </cite>
+        </p>
       </nav>
-      <p class="m-2">
-        <cite>Website designed &amp; developed by: 
-          <a href="https://github.com/heather-cunningham" rel="noopener" target="_blank" 
-          alt="See my GitHub portfolio" title="See my GitHub portfolio">Heather I. Cunningham</a>
-        </cite>
-      </p>
     </div>
     </nav>
   </footer>
