--- a/templates/games/anagram-hunt.html
+++ b/templates/games/anagram-hunt.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <h2 class="text-center">Anagram Hunt</h2>
+  <h2 class="mx-auto my-3 text-center">Anagram Hunt</h2>
 
   {{ block.super }}
     
