--- a/templates/games/math-facts.html
+++ b/templates/games/math-facts.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <h2 class="text-center">Math Facts</h2>
+  <h2 class="mx-auto my-3 text-center">Math Facts</h2>
 
   {{ block.super }}
   
