user-reg-n-auth: misnamed `account` dir as "accounts". Renamed to account.

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -124,7 +124,8 @@
               aria-expanded="false">Sign In/Sign Up</a>
             <div id="sign-dropdown-menu-div" class="dropdown-menu" 
               aria-labelledby="sign-dropdown-link">
-              <a id="login-nav-link" class="dropdown-item" href="#">Log in</a>
+              <a id="login-nav-link" class="dropdown-item" href="{% url 'account_login' %}" 
+                alt="Log in">Log in</a>
               <a id="register-nav-link" class="dropdown-item" href="#">Register</a>
             </div>
           </li><!-- END Sign In/Up Dropdown -->
