--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,20 +7,23 @@
 {% endblock %}
 
 {% block main %}
-<div id="reset-pswd-div" class="card border-primary m-auto mb-3" style="max-width: 30rem">
+<div id="reset-pswd-form-container" class="container-fluid mx-auto mb-5 pb-5 justify-content-center">
+  <h2 id="reset-pswd-header" class="mx-auto my-3 text-center">Reset Password</h2>
   
-  <div id="reset-pswd-header" class="card-header text-center">Reset Password</div>
-  
-  <div id="reset-pswd-card" class="card-body">
-    <form id="reset-pswd-form" method="post" class="m-auto">
-      {% csrf_token %}
-
-      {{ form|crispy }}
+  <div id="reset-pswd-div" class="card border-primary mx-auto mb-3 justify-content-center">
+    <div id="reset-pswd-card" class="card-body">
       
-      <button id="reset-pswd-btn" type="submit" name="Reset Password" value="reset-password"
-        class="form-control btn btn-primary" 
-        alt="Press to reset your password.">Reset Password</button>
-    </form>
+      <form id="reset-pswd-form" method="post" class="m-auto">
+        {% csrf_token %}
+
+        {{ form|crispy }}
+        
+        <button id="reset-pswd-btn" type="submit" name="Reset Password" value="reset-password"
+          class="form-control btn btn-primary" 
+          alt="Press to reset your password.">Reset Password</button>
+      </form>
+    
+    </div>
   </div>
 </div>
 {% endblock %}
