--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -11,35 +11,45 @@
 {% endblock %}
 
 {% block main %}
-<div id="change-pswd-div" class="card border-primary m-auto mb-3" style="max-width: 30rem">
-  
-  <div id="change-pswd-header" class="card-header text-center">
+<div id="change-pswd-form-container" class="container-fluid mx-auto mb-5 pb-5 justify-content-center">
+  <h2 id="change-pswd-header" class="mx-auto my-3 text-center">
     {% if token_fail %}
-      Bad Token
-    {% else %}
-      Change Password
-    {% endif %}
-  </div>
-  
-  <div id="change-pswd-card" class="card-body">
-    {% if token_fail %}
-      <p id="reset-link-invalid" class="card-text">
-        The password reset link is invalid, or it has been used already. 
-        Please request a 
-        <a id="reset-link" href="{% url 'account_reset_password' %}">new password reset link</a>.
-      </p>
+        Bad Token
+      {% else %}
+        Change Password
+      {% endif %}
+  </h2>
+
+  <div id="change-pswd-div" class="card border-primary m-auto mb-3">
+    <!-- <div class="card-header text-center">
+      {% if token_fail %}
+        Bad Token
+      {% else %}
+        Change Password
+      {% endif %}
+    </div> -->
     
-    {% else %}
-      <form id="change-pswd-form" method="post" class="m-auto">
-        {% csrf_token %}
+    <div id="change-pswd-card" class="card-body">
+      {% if token_fail %}
+        <p id="reset-link-invalid" class="card-text text-center">
+          The password reset link is invalid, or it has been used already. 
+          Please request a 
+          <a id="reset-link" href="{% url 'account_reset_password' %}" 
+            alt="Request new password reset link.">new password reset link</a>.
+        </p>
+      
+      {% else %}
+        <form id="change-pswd-form" method="post" class="m-auto">
+          {% csrf_token %}
 
-        {{ form|crispy }}
+          {{ form|crispy }}
 
-        <button id="change-pswd-btn" type="submit" value="Change Password" name="change-password" 
-          class="form-control btn btn-primary" 
-          alt="Press to change your password.">Change Password</button>
-      </form>
-    {% endif %}
+          <button id="change-pswd-btn" type="submit" value="Change Password" name="change-password" 
+            class="form-control btn btn-primary" 
+            alt="Press to change your password.">Change Password</button>
+        </form>
+      {% endif %}
+    </div>
   </div>
 </div>
 {% endblock %}
