--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -7,16 +7,18 @@
 {% endblock %}
 
 {% block main %}
-<div id="pswd-changed-div" class="card border-primary m-auto mb-3" style="max-width: 30rem">
+<div id="pswd-changed-container" class="container-fluid mx-auto mb-5 pb-5 justify-content-center">
+  <h2 id="pswd-changed-header" class="mx-auto my-3 text-center">Password Changed</h2>
 
-  <div id="pswd-changed-header" class="card-header text-center">Password Changed</div>
-  
-  <div id="pswd-changed-card" class="card-body">
-    <p id="pswd-changed-msg" class="card-text text-center">
-      Your password has been changed.
-      <a id="login-link" href="{% url 'account_login' %}">Log in</a>.
-    </p>
+  <div id="pswd-changed-div" class="card border-primary m-auto mb-3">
+    
+    <div id="pswd-changed-card" class="card-body">
+      <p id="pswd-changed-msg" class="card-text text-center">
+        Your password has been changed.
+        <a id="login-link" href="{% url 'account_login' %}">Log in</a>.
+      </p>
+    </div>
+
   </div>
-
 </div>
 {% endblock %}
