--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,33 +3,33 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-	Log in
+Log in
 {% endblock %}
 
 {% block main %}
-<div id="log-in-div" class="card border-primary m-auto mb-3" style="max-width: 30rem">
-  
-	<div id="log-in-header" class="card-header text-center">Log in</div>
-  
-	<div id="log-in-card" class="card-body">
-    
-		<form id="log-in-form" method="post" class="m-auto">
-      
-			{% csrf_token %}
-      
-			{{ form|crispy }}
-      
-			<button id="log-in-btn" type="submit" name="Log In" value="login" 
-				class="form-control btn btn-primary" 
-				alt="Press to log in to your account.">Log In</button>
-    </form>
-  </div>
-  
-	<div id="log-in-footer" class="card-footer">
-    <p id="links-para">
-			<a id="forgot-pswd-link" href="{% url 'account_reset_password' %}">Forgot password</a> <br />
-			No account? <a id="register-link" href="{% url 'account_signup' %}">Register</a> for one now!
-    </p>
-  </div>
+<div id="log-in-form-container" class="container-fluid mx-auto mb-5 pb-5 justify-content-center">
+	<h2 id="log-in-header" class="mx-auto my-3 text-center">Log in</h2>
+
+	<div id="log-in-div" class="card border-primary mx-auto my-3 justify-content-center">
+		<div id="log-in-card" class="card-body">
+
+			<form id="log-in-form" method="post" class="m-auto">
+
+				{% csrf_token %}
+
+				{{ form|crispy }}
+
+				<button id="log-in-btn" type="submit" name="Log In" value="login" class="form-control btn btn-primary"
+					alt="Press to log in to your account.">Log In</button>
+			</form>
+		</div>
+
+		<div id="log-in-footer" class="card-footer">
+			<p id="links-para" class="text-center mt-3">
+				<a id="forgot-pswd-link" href="{% url 'account_reset_password' %}">Forgot password</a>? <br />
+				No account? <a id="register-link" href="{% url 'account_signup' %}">Register</a> for one now!
+			</p>
+		</div>
+	</div>
 </div>
 {% endblock %}
