user-reg-n-auth: Minor edits to style and text

--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -28,7 +28,7 @@
       {% else %}
 
         <p id="confirmation-expired-msg" class="card-text text-center">
-          This confirmation link has expired or is invalid. Please, try
+          This confirmation link is expired or invalid. Please, try
           <a id="login-link" href="{% url 'account_email' %}">logging in again</a>.
           You will be sent a new confirmation link.
         </p>
