--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -14,7 +14,7 @@
     <div id="verify-email-card" class="card-body">
       
       <p id="verify-email-msg" class="card-text text-center">
-        We have sent an email to you for verification.
+        We have sent an email to your email address for verification.
         Please, follow the link enclosed to finalize your registration.
       </p>
     
