--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-Log in
+	Log in
 {% endblock %}
 
 {% block main %}
@@ -19,7 +19,8 @@ Log in
 
 				{{ form|crispy }}
 
-				<button id="log-in-btn" type="submit" name="Log In" value="login" class="form-control btn btn-primary"
+				<button id="log-in-btn" type="submit" name="Log In" value="login" 
+          class="form-control btn btn-primary"
 					alt="Press to log in to your account.">Log In</button>
 			</form>
 		</div>
