--- a/templates/_base.html
+++ b/templates/_base.html
@@ -122,7 +122,7 @@
               <div id="me-dropdown-menu-div" class="dropdown-menu" 
                 aria-labelledby="me-dropdown-link">
                   <a id="my-account-nav-link" class="dropdown-item" 
-                    href="#" 
+                    href="{% url 'my-account' %}" 
                     alt="Go to your My Account page">My Account</a>
                   <a id="my-games-nav-link" class="dropdown-item"
                     href="#" 
