user-reg-n-auth: MyGames show-hide links, scrollable table w/ sticky header, and constrained table height w/ overflow scrollbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -111,6 +111,23 @@ p#no-my-mf-scores-yet {
   font-size: 1.25rem; 
   font-style: italic;
 }
+
+#my-ah-scrollable-table,
+#my-mf-scrollable-table {
+  display: block;
+  max-height: 18rem; 
+  overflow-y: auto;
+}
+
+#my-mf-scrollable-table {
+  margin-bottom: 3rem;  
+}
+
+.sticky-table-thead {
+  position: sticky;
+  top: 0;
+  z-index: 2; 
+}
 /* End Leaderboards TABLE styles */
 
 
