--- a/templates/games/my-games.html
+++ b/templates/games/my-games.html
@@ -1,5 +1,7 @@
 {% extends "_base.html" %}
 
+{% load static %}
+
 {% block title %}
   My Games
 {% endblock %}
@@ -8,13 +10,14 @@
   <h2 id="my-games-heading" class="mx-auto mt-3 mb-0 text-center">My Games</h2>
 
   <div id="my-games-container" class="container-fluid mx-auto mt-0 mb-5 p-3">
-
-    <h3 id="my-ah-scores-heading" class="mx-auto mt-1 mb-3 text-center">
-      My Anagram Hunt Scores
-    </h3>
+    
     {% if my_ah_scores %}
+    <h3 id="my-ah-scores-heading" class="mx-auto mt-1 mb-3 text-center">
+       <a href="javascript:void(0);" onclick="toggleVisibility('my-ah-scores-tbl')">My Anagram Hunt Scores</a>
+    </h3>
+    <div id="my-ah-scrollable-table">
       <table id="my-ah-scores-tbl" class="table table-striped table-hover mx-auto my-2 border">
-        <thead class="table-primary">
+        <thead class="table-primary sticky-table-thead">
           <tr>
             <th id="my-ah-score-header">Final Score</th>
             <th id="my-ah-date-header">Date Played</th>
@@ -33,17 +36,23 @@
           {% endfor %}
         </tbody>
       </table>
+    </div>
     {% else %}
+      <h3 id="my-ah-scores-heading" class="mx-auto mt-1 mb-3 text-center">
+        My Anagram Hunt Scores</h3>
       <p id="no-my-ah-scores-yet" class="text-primary text-center">
         No Anagram Hunt scores saved yet! Play and save your scores.
       </p>
     {% endif %}
 
 
-    <h3 id="my-mf-scores-heading" class="mx-auto mt-4 mb-3 text-center">My Math Facts Scores</h3>
     {% if my_mf_scores %}
+    <h3 id="my-mf-scores-heading" class="mx-auto mt-4 mb-3 text-center">
+      <a href="javascript:void(0);" onclick="toggleVisibility('my-mf-scores-tbl')">My Math Facts Scores</a>
+    </h3>
+    <div id="my-mf-scrollable-table">
       <table id="my-mf-scores-tbl" class="table table-striped table-hover mx-auto my-2 border">
-        <thead class="table-primary">
+        <thead class="table-primary sticky-table-thead">
           <tr>
             <th id="my-mf-score-header">Final Score</th>
             <th id="my-mf-date-header">Date Played</th>
@@ -62,11 +71,18 @@
           {% endfor %}
         </tbody>
       </table>
+    </div>
     {% else %}
+      <h3 id="my-mf-scores-heading" class="mx-auto mt-4 mb-3 text-center">
+        My Math Facts Scores</h3>
       <p id="no-my-mf-scores-yet" class="text-primary text-center">
         No Math Facts scores saved yet! Play and save your scores.
       </p>
     {% endif %}
 
   </div> <!-- END container -->
+
+  {% block scripts %}
+    <script src="{% static 'js/toggleVisibility.js' %}"></script>
+  {% endblock %}
 {% endblock %} <!-- END main -->
