media-files: Commenting out Avatar code for now because it's not part of the Final Project instructions.  If I have time, I'll add it back.

--- a/templates/account/my_account.html
+++ b/templates/account/my_account.html
@@ -13,10 +13,12 @@
   <div id="my-accnt-div" class="card border-primary m-auto mb-3">
     <div id="my-accnt-card" class="card-body">
 
-      {% if user.avatar and not form.avatar.errors %}
+      <!-- Commenting out Avatar code for now because it's not part of the Final Project instructions. 
+           If I have time, I'll add it back in. -->
+       <!-- if user.avatar and not form.avatar.errors 
         <img id="my-accnt-avatar-pic" src="{{ user.avatar.url }}" class="img-thumbnail mx-auto d-block" 
           alt="Avatar or profile picture"/>
-      {% endif %}
+       endif  -->
 
       <form id="my-accnt-form" method="post" class="m-auto">
         {% csrf_token %}
