--- a/templates/games/my-games.html
+++ b/templates/games/my-games.html
@@ -7,36 +7,63 @@
 {% endblock %}
 
 {% block main %}
+<div id="my-games-container" class="container-fluid mx-auto mt-0 mb-5 p-3">
   <h2 id="my-games-heading" class="mx-auto mt-3 mb-0 text-center">My Games</h2>
 
-  <div id="my-games-container" class="container-fluid mx-auto mt-0 mb-5 p-3">
-    
     {% if my_ah_scores %}
     <h3 id="my-ah-scores-heading" class="mx-auto mt-1 mb-3 text-center">
-       <a href="javascript:void(0);" onclick="toggleVisibility('my-ah-scores-tbl')">My Anagram Hunt Scores</a>
+       <a href="javascript:void(0);" onclick="toggleVisibility('my-ah-tbl-container')">
+        My Anagram Hunt Scores</a>
     </h3>
-    <div id="my-ah-scrollable-table">
-      <table id="my-ah-scores-tbl" class="table table-striped table-hover mx-auto my-2 border">
-        <thead class="table-primary sticky-table-thead">
-          <tr>
-            <th id="my-ah-score-header">Final Score</th>
-            <th id="my-ah-date-header">Date Played</th>
-            <th id="my-ah-settings-header">Game Settings</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for score in my_ah_scores %}
+    <div id="my-ah-tbl-container">
+      <div id="my-ah-scrollable-table">
+        <table id="my-ah-scores-tbl" class="table table-striped table-hover mx-auto my-2 border">
+          <thead class="table-primary sticky-table-thead">
             <tr>
-              <td id="my-ah-score-{{score.id}}">{{ score.final_score }}</td>
-              <td id="my-ah-datetime-{{score.id}}">{{ score.game_date_time }}</td>
-              <td id="my-ah-settings-{{score.id}}">  
-                <b>Word Length:</b> {{ score.game.settings.word_length }}
-              </td>
+              <th id="my-ah-score-header">Final Score</th>
+              <th id="my-ah-date-header">Date Played</th>
+              <th id="my-ah-settings-header">Game Settings</th>
             </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+          </thead>
+          <tbody>
+            {% for score in my_ah_scores %}
+              <tr>
+                <td id="my-ah-score-{{score.id}}">{{ score.final_score }}</td>
+                <td id="my-ah-datetime-{{score.id}}">{{ score.game_date_time }}</td>
+                <td id="my-ah-settings-{{score.id}}">  
+                  <b>Word Length:</b> {{ score.game.settings.word_length }}
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+      <!-- Anagram Hunt Pagination -->
+      <nav id="my-ah-pagination" class="mx-auto p-1" aria-label="Anagram Hunt Pagination">
+        <ul class="pagination justify-content-center">
+          {% if my_ah_scores.has_previous %}
+            <li id="my-ah-prev-page-item" class="page-item">
+              <a id="my-ah-prev-page-link" class="page-link" 
+                href="?ah_page={{ my_ah_scores.previous_page_number }}&mf_page={{ my_mf_scores.number }}" 
+                alt="Go to the previous table page of your Anagram Hunt scores">
+                &laquo; Prev</a>
+            </li>
+          {% endif %}
+          <li class="page-item active">
+            <span class="page-link">{{ my_ah_scores.number }}</span>
+          </li>
+          {% if my_ah_scores.has_next %}
+            <li id="my-ah-next-page-item" class="page-item">
+              <a id="my-ah-next-page-link" class="page-link" 
+                href="?ah_page={{ my_ah_scores.next_page_number }}&mf_page={{ my_mf_scores.number }}" 
+                alt="Go to the next table page of your Anagram Hunt scores">
+                Next &raquo;</a>
+            </li>
+          {% endif %}
+        </ul>
+      </nav>
+      <!-- END Anagram Hunt Pagination -->
+    </div> <!-- END my-ah-tbl-container -->
     {% else %}
       <h3 id="my-ah-scores-heading" class="mx-auto mt-1 mb-3 text-center">
         My Anagram Hunt Scores</h3>
@@ -47,31 +74,59 @@
 
 
     {% if my_mf_scores %}
-    <h3 id="my-mf-scores-heading" class="mx-auto mt-4 mb-3 text-center">
-      <a href="javascript:void(0);" onclick="toggleVisibility('my-mf-scores-tbl')">My Math Facts Scores</a>
+    <h3 id="my-mf-scores-heading" class="mx-auto mt-2 mb-3 text-center">
+      <a href="javascript:void(0);" onclick="toggleVisibility('my-mf-tbl-container')">
+        My Math Facts Scores</a>
     </h3>
-    <div id="my-mf-scrollable-table">
-      <table id="my-mf-scores-tbl" class="table table-striped table-hover mx-auto my-2 border">
-        <thead class="table-primary sticky-table-thead">
-          <tr>
-            <th id="my-mf-score-header">Final Score</th>
-            <th id="my-mf-date-header">Date Played</th>
-            <th id="my-mf-settings-header">Game Settings</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for score in my_mf_scores %}
-          <tr>
-            <td id="my-mf-score-{{score.id}}">{{ score.final_score }}</td>
-            <td id="my-mf-datetime-{{score.id}}">{{ score.game_date_time }}</td>
-            <td id="my-mf-settings-{{score.id}}"> 
-              <b>{{ score.game.get_mf_operation }}</b> <br/> 
-              <b>Max Operand:</b> {{ score.game.settings.max_number }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+    <div id="my-mf-tbl-container">
+      <div id="my-mf-scrollable-table">
+        <table id="my-mf-scores-tbl" class="table table-striped table-hover mx-auto my-2 border">
+          <thead class="table-primary sticky-table-thead">
+            <tr>
+              <th id="my-mf-score-header">Final Score</th>
+              <th id="my-mf-date-header">Date Played</th>
+              <th id="my-mf-settings-header">Game Settings</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for score in my_mf_scores %}
+            <tr>
+              <td id="my-mf-score-{{score.id}}">{{ score.final_score }}</td>
+              <td id="my-mf-datetime-{{score.id}}">{{ score.game_date_time }}</td>
+              <td id="my-mf-settings-{{score.id}}"> 
+                <b>{{ score.game.get_mf_operation }}</b> <br/> 
+                <b>Max Operand:</b> {{ score.game.settings.max_number }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+      <!-- Math Facts Pagination -->
+        <nav id="my-mf-pagination" class="mx-auto mt-2 mb-5 p-1" aria-label="Math Facts Pagination">
+          <ul class="pagination justify-content-center">
+            {% if my_mf_scores.has_previous %}
+              <li id="my-mf-prev-page-item" class="page-item">
+                <a id="my-mf-prev-page-link" class="page-link" 
+                  href="?mf_page={{ my_mf_scores.previous_page_number }}&ah_page={{ my_ah_scores.number }}"
+                  alt="Go to the previous table page of your Math Facts scores">
+                  &laquo; Prev</a>
+              </li>
+            {% endif %}
+            <li class="page-item active">
+              <span class="page-link">{{ my_mf_scores.number }}</span>
+            </li>
+            {% if my_mf_scores.has_next %}
+              <li id="my-mf-next-page-item" class="page-item">
+                <a id="my-mf-next-page-link" class="page-link" 
+                  href="?mf_page={{ my_mf_scores.next_page_number }}&ah_page={{ my_ah_scores.number }}"
+                  alt="Go to the next table page of your Math Facts scores">
+                  Next &raquo;</a>
+              </li>
+            {% endif %}
+          </ul>
+        </nav>
+        <!-- END Math Facts Pagination -->
+    </div> <!-- END my-mf-tbl-container -->
     {% else %}
       <h3 id="my-mf-scores-heading" class="mx-auto mt-4 mb-3 text-center">
         My Math Facts Scores</h3>
@@ -80,7 +135,7 @@
       </p>
     {% endif %}
 
-  </div> <!-- END container -->
+</div> <!-- END container -->
 
   {% block scripts %}
     <script src="{% static 'js/toggleVisibility.js' %}"></script>
